new Integer() is now Integer.valueOf()